# 26_birdiebot_nav

./: .data  .gitignore  README.md  nav.sh
install/: local_setup.sh  setup.sh
install/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
install/armor_detector/lib/armor_detector/: armor_detector_node
install/armor_detector/share/armor_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/behaviortree_ros2/include/behaviortree_ros2/: bt_action_node.hpp  bt_service_node.hpp  bt_topic_pub_node.hpp  bt_topic_sub_node.hpp  plugins.hpp  ros_node_params.hpp
install/behaviortree_ros2/share/behaviortree_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/btcpp_ros2_interfaces/share/btcpp_ros2_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/btcpp_ros2_samples/lib/btcpp_ros2_samples/: sleep_client  sleep_client_dyn  sleep_server  (+1 more)
log/: latest_build  latest_list
src/rm_behavior_tree/: README.md
src/rm_behavior_tree/BehaviorTree.ROS2/: README.md
src/rm_behavior_tree/rm_behavior_tree/: CMakeLists.txt  Project.btproj  RMUC.xml  RMUC_02.xml  RMUL.xml  package.xml
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/: bt_conversions.hpp
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/action/: calculate_attack_pose.hpp  get_current_location.hpp  move_around.hpp  print_message.hpp  send_goal.hpp  simple_success.hpp  sleep_action.hpp  sub_all_robot_hp.hpp  sub_cv_decision.hpp  sub_decision_num.hpp  sub_decision_status.hpp  sub_game_status.hpp  sub_robot_status.hpp
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/condition/: is_bullet_ok.hpp  is_center_triggered.hpp  is_enemy_outpost_ok.hpp  is_games_start.hpp  is_outpost_ok.hpp  is_status_ok.hpp  is_time_triggered.hpp
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/control/: decision_switch.hpp
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/decorator/: rate_controller.hpp
src/rm_behavior_tree/rm_behavior_tree/plugins/action/: calculate_attack_pose.cpp  get_current_location.cpp  move_around.cpp  print_message.cpp  send_goal.cpp  simple_success.cpp  sleep_action.cpp  sub_all_robot_hp.cpp  sub_cv_decision.cpp  sub_decision_num.cpp  sub_decision_status.cpp  sub_game_status.cpp  sub_robot_status.cpp
src/rm_behavior_tree/rm_behavior_tree/plugins/condition/: is_bullet_ok.cpp  is_center_triggered.cpp  is_enemy_outpost_ok.cpp  is_game_start.cpp  is_outpost_ok.cpp  is_status_ok.cpp  is_time_triggered.cpp
src/rm_behavior_tree/rm_behavior_tree/plugins/control/: decision_switch.cpp
src/rm_behavior_tree/rm_behavior_tree/plugins/decorator/: rate_controller.cpp
src/rm_behavior_tree/rm_behavior_tree/src/: rm_behavior_tree.cpp
src/rm_behavior_tree/rm_behavior_tree/test_xml/: Project.btproj  comprehensive_test_01.xml  decision_switch_test.xml  enemy_outpost_hp_check_test.xml  multipoints_send_goal_test.xml  outpost_hp_check_test.xml  print_message_test.xml  remaining_bullet_test.xml  robot_status_check_test.xml  supply_time_test.xml
src/rm_behavior_tree/rm_decision_interfaces/: CMakeLists.txt  README.md  package.xml  publish_script.sh
src/rm_serial_driver/: .gitignore  .gitmodules  CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/src/: rm_serial_driver.cpp
(+1416 files in other folders)
